<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.timekeeping.SuccessActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:padding="4dp"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/success"
            android:layout_height="wrap_content"/>
        <ImageView
            android:padding="4dp"
            android:id="@+id/imgBack"
            android:src="@drawable/ic_back"
            android:layout_width="35dp"
            android:layout_height="35dp"/>
    </RelativeLayout>

    <ImageView
        android:src="@drawable/ic_thank"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <TextView
        android:id="@+id/tvTittle"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timekeepingSuccess"/>

    <TextView
        android:id="@+id/btnFinish"
        android:background="@drawable/custom_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/finish"/>


</LinearLayout>