<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach">

    <TextView
        android:id="@+id/tvUsernameHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        tools:text="Hello, Kevin"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Role: Nhan Vien"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvUsernameHome"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameHome" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/home_bg"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameHome">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvStartQuiz"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cvManageUser"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/timekeeping"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.35"
                    app:srcCompat="@drawable/timekeeping" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_quiz"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvManageUser"
            android:layout_width="0dp"
            style="@style/cardViewStyle"
            android:layout_height="@dimen/home_card_height"
            app:layout_constraintBottom_toBottomOf="@+id/cvStartQuiz"
            app:layout_constraintStart_toEndOf="@+id/cvStartQuiz"
            app:layout_constraintEnd_toEndOf="@id/textView4"
            app:layout_constraintTop_toTopOf="@+id/cvStartQuiz" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/manageuser"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_user" />

                <TextView
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cvAssignTask"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/cvMyTask"
            app:layout_constraintStart_toStartOf="@+id/cvStartQuiz"
            app:layout_constraintTop_toBottomOf="@+id/cvStartQuiz">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/assigntask"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.35"
                    app:srcCompat="@drawable/ic_assign_task" />

                <TextView
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assigntask"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMyTask"
            android:layout_width="0dp"
            style="@style/cardViewStyle"
            android:layout_marginTop="16dp"
            android:layout_height="@dimen/home_card_height"
            app:layout_constraintStart_toStartOf="@+id/cvManageUser"
            app:layout_constraintTop_toBottomOf="@+id/cvManageUser"
            app:layout_constraintEnd_toEndOf="@id/cvManageUser"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mytask"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.35"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_task" />

                <TextView
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mytask"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAccount"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            style="@style/cardViewStyle"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cvAssignTask"
            app:layout_constraintStart_toStartOf="@+id/cvAssignTask"
            app:layout_constraintTop_toBottomOf="@+id/cvAssignTask" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.35" />

                <TextView
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAllTask"
            android:layout_width="0dp"
            style="@style/cardViewStyle"
            android:layout_height="@dimen/home_card_height"
            app:layout_constraintBottom_toBottomOf="@+id/cvAccount"
            app:layout_constraintEnd_toEndOf="@+id/cvMyTask"
            app:layout_constraintStart_toStartOf="@+id/cvMyTask"
            app:layout_constraintTop_toTopOf="@+id/cvAccount" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/viewAllTask"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="@dimen/home_image_view_size"
                    android:layout_height="@dimen/home_image_view_size"
                    android:src="@drawable/ic_all_task"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.35" />

                <TextView
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all_task"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSummary"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cvAccount"
            app:layout_constraintTop_toBottomOf="@+id/cvAccount">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="@dimen/home_card_height"
                    android:layout_height="@dimen/home_card_height"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_summary" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/categoryHeadingTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/summary"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="@+id/imageView10" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>